update main layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,7 @@
                 android:id="@+id/condDescr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/temp"
-                android:layout_toRightOf="@id/condIcon"/>
+                android:layout_below="@+id/temp"/>
             <TextView
                 android:id="@+id/humidity"
                 android:layout_alignParentRight="true"
